[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/GenericDeviceWidget.gd" type="Script" id=1]

[node name="DeviceWidget" type="HBoxContainer"]
margin_right = 135.0
margin_bottom = 31.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 74.0
margin_bottom = 32.0

[node name="NameContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 74.0
margin_bottom = 14.0

[node name="NameTitle" type="Label" parent="VBoxContainer/NameContainer"]
margin_right = 46.0
margin_bottom = 14.0
text = "Name: "

[node name="NameLabel" type="Label" parent="VBoxContainer/NameContainer"]
margin_left = 50.0
margin_right = 74.0
margin_bottom = 14.0
text = "N/A"

[node name="TypeContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 74.0
margin_bottom = 32.0

[node name="TypeTitle" type="Label" parent="VBoxContainer/TypeContainer"]
margin_right = 38.0
margin_bottom = 14.0
text = "Type: "

[node name="TypeLabel" type="Label" parent="VBoxContainer/TypeContainer"]
margin_left = 42.0
margin_right = 66.0
margin_bottom = 14.0
text = "N/A"
